# lens-mosaic

./: .gitignore  README.md
blog_sample/: README.md  blog.md  main.py
blog_sample/app/: main.py
docs/: architecture-plan.md  deploy-cloud-run.md  hosted-app-mobile-quickstart.md  local-reader-quickstart.md  usage-modes.md
hosted_app/: README.md  model_test.py  pyproject.toml
hosted_app/app/: .env.example  main.py
hosted_app/app/certs/: openssl-san.cnf
hosted_app/app/static/: index.html
hosted_app/app/static/css/: style.css
hosted_app/app/static/js/: app.js  pcm-recorder-processor.js
hosted_app/test/: test.md  test_search_integration.py
local_live/: README.md  pyproject.toml
local_live/app/: .env.example  main.py  main.py.bak  search.py
local_live/app/certs/: lan-cert.pem  lan-key.pem  openssl-san.cnf
