[project]
name = "advent-mm2"
version = "0.1.0"
description = "Simple bidi-streaming agent with audio and camera support"
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.26.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
